<resources>
	<string name="defaultFont">sans-serif-condensed</string>
	<string name="app_name">Life Game</string>
	<string name="life_game">▚  Life Game  ▚</string>
	<string name="start_button">▷ Start ▷</string>
	<string name="tutorial">ⓘ Tutorial ⓘ</string>
	<string name="random_level_button">∞ Infinite ∞</string>
	<string name="settings">⚙ Settings ⚙</string>
	<string name="run">▷</string>
	<string name="continueButton">Continue</string>
	<string name="questionMark">\?</string>
	<string name="levels">Levels</string>
	<string name="blueHelpTextTip">Turn on this cell with 3 living neighbors</string>
	<string name="darkBlueHelpText">Keep this cell alive with 2 or 3 living neighbors</string>
	<string name="redHelpTextTip">Keep this cell dead with anything but 3 living neighbors</string>
	<string name="darkRedHelpText">Kill this cell with anything but 2 or 3 living neighbors</string>
	<string name="level_data">
		3,3,
		200
		040
		004;
		3,3,
		024
		040
		002;
		3,3,
		242
		444
		242;
		3,3,
		402
		400
		020;
		3,3,
		403
		400
		222;
		3,3,
		422
		244
		240;
		3,3,
		440
		422
		420;
		3,3,
		420
		200
		244;

		4,4,
		0000
		0000
		0000
		0000;

		3,3,
		300
		040
		003;
		3,4,
		2304
		0050
		0203;
		3,3,
		300
		403
		002;
		4,4,
		0020
		0200
		0222
		0000;
		5,5,
		00220
		00200
		02002
		00200
		00020;
		8,8,
		05504030
		04503000
		40003002
		02050000
		40202000
		02040032
		20000005
		04003000
	</string>
	<string name="tutorial_level_data">
		5,5,
		10010
		10100
		00010
		10110
		10000;
		3,3,
		000
		020
		000;
		3,3,
		000
		030
		000;
		3,3,
		001
		140
		010;
		3,3,
		010
		051
		000;
		3,3,
		500
		025
		500;
		3,3,
		003
		340
		030;
	</string>
</resources>
