<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/neutral"
        android:id="@+id/mainLayout"
        >

    <Button
            android:text="@string/start_button"
            android:onClick="launchGame"
            android:backgroundTint="@color/green"
            android:layout_marginTop="30dp"
            android:layout_height="94dp"
            android:id="@+id/runButton"
            android:layout_width="191dp"
            android:fontFamily="@string/defaultFont"
            android:textSize="24sp"
            android:textColor="@color/light"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/tutorialButton"
            app:layout_constraintTop_toBottomOf="@+id/titleText"/>

    <Button
            android:id="@+id/settingsButton"
            android:onClick="launchRandomLevelsGame"
            android:layout_width="191dp"
            android:layout_height="94dp"
            android:backgroundTint="@color/blueBell"
            android:text="@string/random_level_button"
            android:fontFamily="@string/defaultFont"
            android:textSize="20sp"
            android:textColor="@color/light"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/tutorialButton"
            app:layout_constraintBottom_toTopOf="@+id/randomLevelsButton"
            android:textAlignment="center"/>

    <Button
            android:id="@+id/randomLevelsButton"
            android:onClick="settingsButtonClicked"
            android:layout_width="191dp"
            android:layout_height="94dp"
            android:backgroundTint="@color/light"
            android:text="@string/settings"
            android:fontFamily="@string/defaultFont"
            android:textSize="20sp"
            android:textColor="@color/dark"
            android:layout_marginBottom="100dp"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingsButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:textAlignment="center"/>

    <Button
            android:id="@+id/tutorialButton"
            android:onClick="launchTutorial"
            android:layout_width="191dp"
            android:layout_height="94dp"
            android:backgroundTint="@color/blue"
            android:text="@string/tutorial"
            android:fontFamily="@string/defaultFont"
            android:textSize="20sp"
            android:textColor="@color/light"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/settingsButton"
            app:layout_constraintTop_toBottomOf="@+id/runButton"
            app:layout_constraintHorizontal_bias="0.5"
            android:textAlignment="center"/>

    <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/life_game"
            android:fontFamily="@string/defaultFont"
            android:textSize="30sp"
            android:textColor="@color/light"
            android:maxLines="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/runButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>
