<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		tools:context=".HelpMenuFragment"
		android:id="@+id/helpMenu"
		android:background="@color/dark"
		>

	<Button
			android:insetTop="3dp"
			android:insetBottom="3dp"
			android:insetRight="3dp"
			android:insetLeft="3dp"
			android:backgroundTint="@color/blue"
			android:text="3"
			android:textSize="24sp"
			android:textColor="@color/dark"
			android:paddingStart="0dp"
			android:paddingLeft="0dp"
			android:paddingTop="0dp"
			android:paddingEnd="0dp"
			android:paddingRight="0dp"
			android:paddingBottom="0dp"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:id="@+id/blueButton"
			app:layout_constraintEnd_toStartOf="@+id/blueHelpText"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintHorizontal_bias="0.5"
			app:layout_constraintBottom_toTopOf="@+id/darkBlueButton"
			android:clickable="false"/>

	<TextView
			android:layout_width="201dp"
			android:layout_height="95dp"
			android:text="@string/blueHelpTextTip"
			android:id="@+id/blueHelpText"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@+id/blueButton"
			app:layout_constraintHorizontal_bias="0.5"
			app:layout_constraintTop_toTopOf="@+id/blueButton"
			android:textSize="20sp"
			android:background="@color/light"/>

	<Button
			android:insetTop="3dp"
			android:insetBottom="3dp"
			android:insetRight="3dp"
			android:insetLeft="3dp"
			android:backgroundTint="@color/darkBlue"
			android:text="2 or 3"
			android:textSize="24sp"
			android:textColor="@color/light"
			android:paddingStart="0dp"
			android:paddingLeft="0dp"
			android:paddingTop="0dp"
			android:paddingEnd="0dp"
			android:paddingRight="0dp"
			android:paddingBottom="0dp"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:id="@+id/darkBlueButton"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintHorizontal_bias="0.5"
			app:layout_constraintEnd_toStartOf="@+id/darkBlueHelpText"
			app:layout_constraintTop_toBottomOf="@+id/blueButton"
			app:layout_constraintBottom_toTopOf="@+id/redButton"
			android:clickable="false"/>

	<TextView
			android:layout_width="201dp"
			android:layout_height="95dp"
			android:text="@string/darkBlueHelpText"
			android:id="@+id/darkBlueHelpText"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@+id/darkBlueButton"
			app:layout_constraintHorizontal_bias="0.5"
			app:layout_constraintTop_toTopOf="@+id/darkBlueButton"
			android:textSize="20sp"
			android:background="@color/light"/>

	<Button
			android:insetTop="3dp"
			android:insetBottom="3dp"
			android:insetRight="3dp"
			android:insetLeft="3dp"
			android:backgroundTint="@color/lightRed"
			android:text="Not 3"
			android:textSize="24sp"
			android:textColor="@color/dark"
			android:paddingStart="0dp"
			android:paddingLeft="0dp"
			android:paddingTop="0dp"
			android:paddingEnd="0dp"
			android:paddingRight="0dp"
			android:paddingBottom="0dp"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:id="@+id/redButton"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintHorizontal_bias="0.5"
			app:layout_constraintEnd_toStartOf="@+id/redHelpText"
			app:layout_constraintTop_toBottomOf="@+id/darkBlueButton"
			app:layout_constraintBottom_toTopOf="@+id/redBlueButton"
			android:clickable="false"/>

	<TextView
			android:layout_width="201dp"
			android:layout_height="95dp"
			android:text="@string/redHelpTextTip"
			android:id="@+id/redHelpText"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@+id/redButton"
			app:layout_constraintHorizontal_bias="0.5"
			app:layout_constraintTop_toTopOf="@+id/redButton"
			android:background="@color/light"/>

	<Button
			android:insetTop="3dp"
			android:insetBottom="3dp"
			android:insetRight="3dp"
			android:insetLeft="3dp"
			android:backgroundTint="@color/darkRed"
			android:text="Not 2 nor 3"
			android:textSize="20sp"
			android:textColor="@color/light"
			android:paddingStart="0dp"
			android:paddingLeft="0dp"
			android:paddingTop="0dp"
			android:paddingEnd="0dp"
			android:paddingRight="0dp"
			android:paddingBottom="0dp"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:id="@+id/redBlueButton"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintHorizontal_bias="0.5"
			app:layout_constraintEnd_toStartOf="@+id/darkRedHelpText"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/redButton"
			android:clickable="false"/>

	<TextView
			android:layout_width="201dp"
			android:layout_height="95dp"
			android:text="@string/darkRedHelpText"
			android:id="@+id/darkRedHelpText"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@+id/redBlueButton"
			app:layout_constraintHorizontal_bias="0.5"
			app:layout_constraintTop_toTopOf="@+id/redBlueButton"
			android:background="@color/light"/>

</androidx.constraintlayout.widget.ConstraintLayout>
